[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/game/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/ui/GameUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/Ship.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/gameplay/tasks/TaskFactory.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/ui/wheel/ContextWheel2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/imgs/space/space.png" type="Texture" id=6]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1024, 768 )

[node name="icon" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer"]
position = Vector2( 512, 384 )
rotation = 0.523598
texture = ExtResource( 6 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 1024, 768 )

[node name="icon" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer2"]
modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
position = Vector2( 512, 384 )
rotation = -0.523598
texture = ExtResource( 6 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_offset = Vector2( 20, 20 )
motion_mirroring = Vector2( 1024, 768 )

[node name="icon" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer3"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
position = Vector2( 512, 384 )
texture = ExtResource( 6 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="GameUI" parent="UI" instance=ExtResource( 2 )]
mouse_default_cursor_shape = 11

[node name="Ship" parent="." instance=ExtResource( 3 )]
position = Vector2( 612, 384 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 384 )
current = true
zoom = Vector2( 0.9, 0.9 )

[node name="TaskFactory" parent="." instance=ExtResource( 4 )]

[node name="ContextWheel" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 297.419, 300.918 )
[connection signal="next_event_toggled" from="UI/GameUI" to="." method="_on_GameUI_next_event_toggled"]
[connection signal="next_hour_clicked" from="UI/GameUI" to="." method="_on_GameUI_next_hour_clicked"]
[connection signal="give_mask_clicked" from="ContextWheel" to="." method="_on_ContextWheel_give_mask_clicked"]
[connection signal="heal_crew_clicked" from="ContextWheel" to="." method="_on_ContextWheel_heal_crew_clicked"]
[connection signal="move_crew_clicked" from="ContextWheel" to="." method="_on_ContextWheel_move_crew_clicked"]
[connection signal="test_crew_clicked" from="ContextWheel" to="." method="_on_ContextWheel_test_crew_clicked"]
[connection signal="wheel_closed" from="ContextWheel" to="." method="_on_ContextWheel_wheel_closed"]
[connection signal="wheel_opened" from="ContextWheel" to="." method="_on_ContextWheel_wheel_opened"]
